manejo de errores http errors

--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -1,13 +1,14 @@
+
 <section class="content">
   <div class="error-page">
-    <h2 class="headline text-yellow"> 404</h2>
+    <h2 class="headline text-yellow"> {{status}}</h2>
 
     <div class="error-content">
-      <h3><i class="fa fa-warning text-yellow"></i> Oops! Pagina no encontrada.</h3>
+      <h3><i class="fa fa-warning text-yellow"></i> Oops! Pagina no encontrada. </h3>
 
       <p>
         No pudimos encontrar la pagina que buscabas.
-        Mientras, podrias <a href="/app_home">retornar al inicio</a>
+        Mientras, podrias <a href="/home">retornar al inicio</a>
       </p>
 
 
