--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -83,8 +83,11 @@
 
         <div class="navbar-custom-menu">
           <ul class="nav navbar-nav">
-            {{#miniSaveMaker1 data}}
-            {{/miniSaveMaker1}}
+            {{#if data}}
+              {{#miniSaveMaker1 data}}
+              {{/miniSaveMaker1}}
+            {{/if}}
+            
             <!-- User Account: style can be found in dropdown.less -->
             <li class="dropdown user user-menu">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
