--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -4,17 +4,18 @@
     <h2 class="headline text-yellow"> {{status}}</h2>
 
     <div class="error-content">
-      <h3><i class="fa fa-warning text-yellow"></i> Oops! Pagina no encontrada. </h3>
+      <h3><i class="fa fa-warning text-yellow"></i> Oops! </h3>
+      <div>
+        <h3>{{message}}</h3>
+      </div>
 
       <p>
-        No pudimos encontrar la pagina que buscabas.
+
         Mientras, podrias <a href="/home">retornar al inicio</a>
       </p>
 
 
-      <div>
-        <h3>{{message}}</h3>
-      </div>
+      
       <!-- /.input-group -->
 
     </div>
