--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -56,16 +56,16 @@
 
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn">
-							Login
+							Inicia sesión
 						</button>
 					</div>
 
 					<div class="text-center p-t-12">
 						<span class="txt1">
-							Forgot
+							Olvido su
 						</span>
 						<a class="txt2" href="/reset_pass">
-							Username / Password?
+							Usuario / contraseña?
 						</a>
 					</div>
 
