--- a/views/getStarted.handlebars
+++ b/views/getStarted.handlebars
@@ -36,7 +36,7 @@
 
       <div class="form-group">
         <label for="salary">Introduzca su salario</label>
-        <h5 class="text-aqua">Esto nos ayudara a brindarle consejos financieros.</h5>
+        <h5 class="text-aqua">Esto nos ayudará a brindarle consejos financieros.</h5>
         <input type="number" autocomplete="off" required="required" class="form-control text-left" id="salary"
           name="salary">
       </div>
