--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -130,7 +130,7 @@
           </div>
           <div class="pull-left info">
             <p>{{user.name}}</p>
-            <a href="#"><i class="fa fa-circle text-success"></i> En linea</a>
+            <a href="#"><i class="fa fa-circle text-success"></i> En línea</a>
           </div>
         </div>
         <!-- sidebar menu: : style can be found in sidebar.less -->
