--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -399,9 +399,9 @@
             </div>
 
             <div class="form-group">
-              <label>Limite</label>
+              <label>Límite</label>
               <input type="Number" autocomplete="off" name="limit" class="form-control"
-                placeholder="Ingrese el limite de su tarjeta">
+                placeholder="Ingrese el límite de su tarjeta">
             </div>
 
 
