--- a/views/start.handlebars
+++ b/views/start.handlebars
@@ -20,7 +20,7 @@
       <div class="icon">
         <i class="ion ion-cash"></i>
       </div>
-      <a href="/transactions" class="small-box-footer">Mas informacion <i class="fa fa-arrow-circle-right"></i></a>
+      <a href="/transactions" class="small-box-footer">Mas información <i class="fa fa-arrow-circle-right"></i></a>
     </div>
   </div>
   <!-- ./col -->
@@ -40,7 +40,7 @@
       <div class="icon">
         <i class="ion ion-arrow-graph-up-right"></i>
       </div>
-      <a href="/transactions" class="small-box-footer">Mas informacion <i class="fa fa-arrow-circle-right"></i></a>
+      <a href="/transactions" class="small-box-footer">Mas información <i class="fa fa-arrow-circle-right"></i></a>
     </div>
   </div>
   <!-- ./col -->
@@ -61,7 +61,7 @@
       <div class="icon">
         <i class="ion ion-arrow-graph-down-right"></i>
       </div>
-      <a href="/transactions" class="small-box-footer">Mas informacion <i class="fa fa-arrow-circle-right"></i></a>
+      <a href="/transactions" class="small-box-footer">Mas información <i class="fa fa-arrow-circle-right"></i></a>
     </div>
   </div>
   <!-- ./col -->
@@ -78,7 +78,7 @@
       <div class="icon">
         <i class="ion ion-card"></i>
       </div>
-      <a href="/cards" class="small-box-footer">Mas informacion <i class="fa fa-arrow-circle-right"></i></a>
+      <a href="/cards" class="small-box-footer">Mas información <i class="fa fa-arrow-circle-right"></i></a>
     </div>
   </div>
   {{else}}
@@ -101,7 +101,7 @@
       <div class="icon">
         <i class="ion ion-cash"></i>
       </div>
-      <a href="#" class="small-box-footer">Mas informacion <i class="fa fa-arrow-circle-right"></i></a>
+      <a href="#" class="small-box-footer">Mas información <i class="fa fa-arrow-circle-right"></i></a>
     </div>
   </div>
   <!-- ./col -->
@@ -121,7 +121,7 @@
       <div class="icon">
         <i class="ion ion-arrow-graph-up-right"></i>
       </div>
-      <a href="#" class="small-box-footer">Mas informacion <i class="fa fa-arrow-circle-right"></i></a>
+      <a href="#" class="small-box-footer">Mas información <i class="fa fa-arrow-circle-right"></i></a>
     </div>
   </div>
   <!-- ./col -->
@@ -142,7 +142,7 @@
       <div class="icon">
         <i class="ion ion-arrow-graph-down-right"></i>
       </div>
-      <a href="#" class="small-box-footer">Mas informacion <i class="fa fa-arrow-circle-right"></i></a>
+      <a href="#" class="small-box-footer">Mas información <i class="fa fa-arrow-circle-right"></i></a>
     </div>
   </div>
   <!-- ./col -->
@@ -195,7 +195,7 @@
   <div class="col-md-6 ">
     <div class="box box-success">
       <div class="box-header with-border">
-        <h3 class="box-title">gastos por categorias</h3>
+        <h3 class="box-title">Gastos por categorías</h3>
       </div>
       <div class="box-body">
         <canvas id="categories" style="height: 227px; width: 455px;" height="227" width="455"></canvas>
