--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -372,7 +372,7 @@
               <div class="col-md-6">
                 <div class="form-group">
                   <label for="NameCard">Nombre</label>
-                  <input type="text" autocomplete="off" placeholder="nombre de la tarjeta"
+                  <input type="text" autocomplete="off" placeholder="Nombre de la tarjeta"
                     class="form-control text-left" id="NameCard" name="nameCard">
                 </div>
                 <!-- /input-group -->
@@ -450,7 +450,7 @@
               <div class="col-md-6">
                 <div class="form-group">
                   <label for="savename">Nombre</label>
-                  <input type="text" autocomplete="off" placeholder="nombre del ahorro" class="form-control text-left"
+                  <input type="text" autocomplete="off" placeholder="Nombre del ahorro" class="form-control text-left"
                     id="savemane" name="saveName">
                 </div>
                 <!-- /input-group -->
