--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -546,7 +546,7 @@
 
             <div class="form-group">
               <label>Descripción</label>
-              <input type="text" autocomplete="off" name="comment" class="form-control" placeholder="Descripcion">
+              <input type="text" autocomplete="off" name="comment" class="form-control" placeholder="Descripción">
             </div>
 
 
