--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -674,7 +674,7 @@
             </div>
             <div class="col-md-6">
               <h1 class="text-center"><strong>¡Ops!</strong></h1>
-              <h3 class="text-center">No tienes ninguna tarjeta creada aun, puedes crear una a continuación.</h3>
+              <h3 class="text-center">No tienes ninguna tarjeta creada aún, puedes crear una a continuación.</h3>
             </div>
           </div>
         </div>
