--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -175,7 +175,7 @@
 
           <li>
             <a href="/cards">
-              <i class="fa fa-credit-card"></i> <span>Tarjetas de credito</span>
+              <i class="fa fa-credit-card"></i> <span>Tarjetas de crédito</span>
             </a>
           </li>
 
@@ -582,7 +582,7 @@
         <div class="modal-footer">
           <div class="btn-group btn-group-justified" role="group" aria-label="group button">
             <div class="btn-group" role="group">
-              <button type="button" class="btn btn-block btn-danger btn-lg">Cerrar</button>
+              <button type="button" data-dismiss="modal" class="btn btn-block btn-danger btn-lg">Cerrar</button>
             </div>
             <div class="btn-group" role="group">
               <button class="btn btn-block btn-success btn-lg" onclick="addExpense()">Guardar</button>
