--- a/views/transactions.handlebars
+++ b/views/transactions.handlebars
@@ -27,13 +27,13 @@
                   <tr>
                     <th style="width: 10px">#</th>
                     <th style="width: 100px">Fecha</th>
-                    <th>Descripcion</th>
+                    <th>Descripción</th>
                     <th>Categoria</th>
                     <th>Cuenta</th>
                     <th>Valor</th>
                     <td style="display:none;">id</td>
                     <th style="width: 20px">Editar</th>
-                    <th style="width: 20px">borrar</th>
+                    <th style="width: 20px">Borrar</th>
 
                   </tr>
                 </thead>
@@ -59,12 +59,12 @@
                   <tr>
                     <th style="width: 10px">#</th>
                     <th style="width: 100px">Fecha</th>
-                    <th>Descripcion</th>
+                    <th>Descripción</th>
                     <th>Categoria</th>
                     <th>Cuenta</th>
                     <th>Valor</th>
                     <th style="width: 20px">Editar</th>
-                    <th style="width: 20px">borrar</th>
+                    <th style="width: 20px">Borrar</th>
 
                   </tr>
                 </thead>
@@ -92,12 +92,12 @@
                   <tr>
                     <th style="width: 10px">#</th>
                     <th style="width: 100px">Fecha</th>
-                    <th>Descripcion</th>
+                    <th>Descripción</th>
                     <th>Categoria</th>
                     <th>Cuenta</th>
                     <th>Valor</th>
                     <th style="width: 20px">Editar</th>
-                    <th style="width: 20px">borrar</th>
+                    <th style="width: 20px">Borrar</th>
 
                   </tr>
 
