--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -298,7 +298,7 @@
 
             <div class="form-group">
               <label>Descripción</label>
-              <input type="text" autocomplete="off" name="comment" class="form-control" placeholder="Descripcion">
+              <input type="text" autocomplete="off" name="comment" class="form-control" placeholder="Descripción">
             </div>
 
 
@@ -334,7 +334,7 @@
         <div class="modal-footer">
           <div class="btn-group btn-group-justified" role="group" aria-label="group button">
             <div class="btn-group" role="group">
-              <button type="button" class="btn btn-block btn-danger btn-lg">Cerrar</button>
+              <button type="button" data-dismiss="modal" class="btn btn-block btn-danger btn-lg">Cerrar</button>
             </div>
             <div class="btn-group" role="group">
               <button class="btn btn-block btn-success btn-lg" onclick="addIncome()">Guardar</button>
@@ -414,7 +414,7 @@
         <div class="modal-footer">
           <div class="btn-group btn-group-justified" role="group" aria-label="group button">
             <div class="btn-group" role="group">
-              <button type="button" class="btn btn-block btn-danger btn-lg">Cerrar</button>
+              <button type="button" data-dismiss="modal" class="btn btn-block btn-danger btn-lg">Cerrar</button>
             </div>
             <div class="btn-group" role="group">
               <button class="btn btn-block btn-success btn-lg" onclick="addCreditCard()">Guardar</button>
@@ -476,7 +476,7 @@
         <div class="modal-footer">
           <div class="btn-group btn-group-justified" role="group" aria-label="group button">
             <div class="btn-group" role="group">
-              <button type="button" class="btn btn-block btn-danger btn-lg">Cerrar</button>
+              <button type="button" data-dismiss="modal" class="btn btn-block btn-danger btn-lg">Cerrar</button>
             </div>
             <div class="btn-group" role="group">
               <button class="btn btn-block btn-success btn-lg" onclick="addSavingS()">Guardar</button>
@@ -648,7 +648,7 @@
         <div class="modal-footer">
           <div class="btn-group btn-group-justified" role="group" aria-label="group button">
             <div class="btn-group" role="group">
-              <button type="button" class="btn btn-block btn-danger btn-lg">Cerrar</button>
+              <button type="button" data-dismiss="modal" class="btn btn-block btn-danger btn-lg">Cerrar</button>
             </div>
             <div class="btn-group" role="group">
               <button class="btn btn-block btn-success btn-lg" onclick="addCard()">Guardar</button>
@@ -749,7 +749,7 @@
         <div class="modal-footer">
           <div class="btn-group btn-group-justified" role="group" aria-label="group button">
             <div class="btn-group" role="group">
-              <button type="button" class="btn btn-block btn-danger btn-lg">Cerrar</button>
+              <button type="button" data-dismiss="modal" class="btn btn-block btn-danger btn-lg">Cerrar</button>
             </div>
             <div class="btn-group" role="group">
               <button class="btn btn-block btn-success btn-lg" onclick="addSaving()">Guardar</button>
