--- a/views/transactions.handlebars
+++ b/views/transactions.handlebars
@@ -5,7 +5,7 @@
     <div class="nav-tabs-custom">
       <ul class="nav nav-tabs">
         <li class="active"><a href="#tab_1" data-toggle="tab" aria-expanded="false">
-            <h4>transacciones</h4>
+            <h4>Transacciones</h4>
           </a></li>
         <li class=""><a href="#tab_2" data-toggle="tab" aria-expanded="false">
             <h4>Gastos</h4>
