--- a/views/transactions.handlebars
+++ b/views/transactions.handlebars
@@ -205,7 +205,7 @@
             <div class="inner">
               {{#cardTotal data}}
               {{/cardTotal}}
-              <p>Tarjetas de credito</p>
+              <p>Tarjetas de crédito</p>
             </div>
             <div class="icon">
               <i class="ion ion-card"></i>
