--- a/views/accounts.handlebars
+++ b/views/accounts.handlebars
@@ -20,7 +20,7 @@
         </div>
         <div class="row">
           <div class="col-lg-12">
-            <h3 class="text-center">crear cuenta</h3>
+            <h3 class="text-center">Crear cuenta</h3>
           </div>
         </div>
 
