--- a/views/transactions.handlebars
+++ b/views/transactions.handlebars
@@ -28,7 +28,7 @@
                     <th style="width: 10px">#</th>
                     <th style="width: 100px">Fecha</th>
                     <th>Descripción</th>
-                    <th>Categoria</th>
+                    <th>Categoría</th>
                     <th>Cuenta</th>
                     <th>Valor</th>
                     <td style="display:none;">id</td>
@@ -60,7 +60,7 @@
                     <th style="width: 10px">#</th>
                     <th style="width: 100px">Fecha</th>
                     <th>Descripción</th>
-                    <th>Categoria</th>
+                    <th>Categoría</th>
                     <th>Cuenta</th>
                     <th>Valor</th>
                     <th style="width: 20px">Editar</th>
@@ -93,7 +93,7 @@
                     <th style="width: 10px">#</th>
                     <th style="width: 100px">Fecha</th>
                     <th>Descripción</th>
-                    <th>Categoria</th>
+                    <th>Categoría</th>
                     <th>Cuenta</th>
                     <th>Valor</th>
                     <th style="width: 20px">Editar</th>
