--- a/views/cards.handlebars
+++ b/views/cards.handlebars
@@ -22,7 +22,7 @@
             </div>
             <div class="row">
                <div class="col-lg-12">
-                  <h3 class="text-center">crear tarjeta</h3>
+                  <h3 class="text-center">Crear tarjeta</h3>
                </div>
             </div>
 
