--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -156,7 +156,7 @@
 
           <li>
             <a href="/categories">
-              <i class="fa fa-list-ol"></i> <span>Categorias</span>
+              <i class="fa fa-list-ol"></i> <span>Categorías</span>
             </a>
           </li>
 
@@ -182,7 +182,7 @@
           <li class="treeview">
             <a href="#">
               <i class="fa fa-pie-chart"></i>
-              <span>Graficos</span>
+              <span>Gráficos</span>
               <span class="pull-right-container">
                 <i class="fa fa-angle-left pull-right"></i>
               </span>
