--- a/views/categories.handlebars
+++ b/views/categories.handlebars
@@ -2,11 +2,11 @@
   <div class="col-lg-12">
     <div class="box">
       <div class="box-header">
-        <h3 class="box-title">Categorias disponibles</h3>
+        <h3 class="box-title">Categorías disponibles</h3>
         <div class="box-tools">
           <ul class="pagination pagination-sm no-margin pull-right">
             <li><button id="modalActivator-button" data-toggle="modal" data-target="#addcategory" type="button"
-                class="btn btn-block btn-success btn-sm">Agregar categoria</button></li>
+                class="btn btn-block btn-success btn-sm">Agregar categoría</button></li>
 
           </ul>
         </div>
