--- a/views/404.handlebars
+++ b/views/404.handlebars
@@ -11,7 +11,7 @@
 
       <p>
 
-        Mientras, podrias <a href="/home">retornar al inicio</a>
+        Mientras, puedes <a href="/home">retornar al inicio.</a>
       </p>
 
 
