--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -54,7 +54,7 @@
 
             <div>
               <h3>
-                Informacion general
+                Información general
               </h3>
             </div>
             <div class="form-group">
@@ -93,7 +93,7 @@
             </div>
 
             <div class="form-group">
-              <label for="inputSkills" class="col-sm-2 control-label">repite la contraseña</label>
+              <label for="inputSkills" class="col-sm-2 control-label">Repite la contraseña</label>
 
               <div class="col-sm-10">
                 <input type="password" class="form-control" id="new_password_confirm" placeholder="*****" name="new_password_confirm">
