--- a/views/layouts/home.handlebars
+++ b/views/layouts/home.handlebars
@@ -261,7 +261,7 @@
         <div class="modal-header">
           <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span
               class="sr-only">Close</span></button>
-          <h3 class="modal-title" id="lineModalLabel">Nuevo Ingreso</h3>
+          <h3 class="modal-title" id="lineModalLabel">Nuevo ingreso</h3>
         </div>
         <div class="modal-body">
 
