--- a/views/savings.handlebars
+++ b/views/savings.handlebars
@@ -56,7 +56,7 @@
                   <div class="col-md-6">
                      <div class="form-group">
                         <label for="savename">Nombre</label>
-                        <input type="text" autocomplete="off" placeholder="nombre del ahorro"
+                        <input type="text" autocomplete="off" placeholder="Nombre del ahorro"
                            class="form-control text-left" id="savemane" name="saveName">
                      </div>
                      <!-- /input-group -->
@@ -82,7 +82,7 @@
          <div class="modal-footer">
             <div class="btn-group btn-group-justified" role="group" aria-label="group button">
                <div class="btn-group" role="group">
-                  <button type="button" class="btn btn-block btn-danger btn-lg">Cerrar</button>
+                  <button type="button" data-dismiss="modal" class="btn btn-block btn-danger btn-lg">Cerrar</button>
                </div>
                <div class="btn-group" role="group">
                   <button class="btn btn-block btn-success btn-lg" onclick="addSavingS()">Guardar</button>
