--- a/views/accounts.handlebars
+++ b/views/accounts.handlebars
@@ -41,7 +41,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span class="sr-only">Close</span></button>
-            <h3 class="modal-title" id="lineModalLabel">Nuevo Ingreso</h3>
+            <h3 class="modal-title" id="lineModalLabel">Nueva cuenta</h3>
           </div>
           <div class="modal-body">
             
