--- a/views/cards.handlebars
+++ b/views/cards.handlebars
@@ -55,7 +55,7 @@
               <div class="col-md-6">
                 <div class="form-group">
                   <label for="NameCard">Nombre</label>
-                  <input type="text" autocomplete="off" placeholder="nombre de la tarjeta"
+                  <input type="text" autocomplete="off" placeholder="Nombre de la tarjeta"
                     class="form-control text-left" id="NameCard" name="nameCard">
                 </div>
                 <!-- /input-group -->
@@ -82,9 +82,9 @@
             </div>
 
             <div class="form-group">
-              <label>Limite</label>
+              <label>Límite</label>
               <input type="Number" autocomplete="off" name="limit" class="form-control"
-                placeholder="Ingrese el limite de su tarjeta">
+                placeholder="Ingrese el límite de su tarjeta">
             </div>
 
 
