--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -76,7 +76,7 @@
 								<li class="has-dropdown">
 									<a href="#">Acerca de</a>
 								</li>
-								<li><a href="#">Documentacion</a></li>
+								<li><a href="#">Documentación</a></li>
 
 								<li class="btn-cta"><a href="/register">Registrate</a></li>
 								<li class="btn-cta"><a href="/login">Inicia sesión</a></li>
