--- a/views/cards.handlebars
+++ b/views/cards.handlebars
@@ -83,7 +83,7 @@
 
             <div class="form-group">
               <label>Límite</label>
-              <input type="Number" autocomplete="off" name="limit" class="form-control"
+              <input type="Number" min="0" autocomplete="off" name="limit" class="form-control"
                 placeholder="Ingrese el límite de su tarjeta">
             </div>
 
