--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -126,7 +126,7 @@
 			<div class="container">
 				<div class="row">
 					<div class="col-md-8 col-md-offset-2 text-center colorlib-heading animate-box">
-						<h2>¿Como funciona?</h2>
+						<h2>¿Cómo funciona?</h2>
 						<p>Dedica un par de minutos al dia para organizar tus gastos y finanzas.</p>
 					</div>
 				</div>
