--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Login V1</title>
+	<title>Regístro en Wall-E</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!--===============================================================================================-->
@@ -43,7 +43,7 @@
 
 				<form action="/register" class="login100-form validate-form" method="POST">
 					<span class="login100-form-title">
-						Registrate
+						Regístrate
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate="Un nombre es requerido">
@@ -83,7 +83,7 @@
 
 					<div class="container-login100-form-btn">
 						<button class="login100-form-btn">
-							Registrate
+							Regístrate
 						</button>
 					</div>
 
