--- a/views/savings.handlebars
+++ b/views/savings.handlebars
@@ -65,7 +65,7 @@
                   <div class="col-lg-6">
                      <div class="form-group">
                         <label>Meta de ahorro</label>
-                        <input type="Number" autocomplete="off" name="goal" class="form-control"
+                        <input type="Number" min="0" autocomplete="off" name="goal" class="form-control"
                            placeholder="Ingrese su meta de ahorro">
                      </div>
                   </div>
