--- a/views/transactions.handlebars
+++ b/views/transactions.handlebars
@@ -21,7 +21,7 @@
               <h3 class="box-title">Resumen de gastos e ingresos</h3>
             </div>
             <!-- /.box-header -->
-            <div class="box-body no-padding">
+            <div class="box-body no-padding table-responsive">
               <table class="table table-striped">
                 <thead class="inEx">
                   <tr>
@@ -53,7 +53,7 @@
               <h3 class="box-title">Resumen de gastos</h3>
             </div>
             <!-- /.box-header -->
-            <div class="box-body no-padding">
+            <div class="box-body no-padding table-responsive">
               <table class="table table-striped">
                 <thead>
                   <tr>
@@ -86,7 +86,7 @@
               <h3 class="box-title">Resumen de ingresos</h3>
             </div>
             <!-- /.box-header -->
-            <div class="box-body no-padding">
+            <div class="box-body no-padding table-responsive">
               <table class="table table-striped">
                 <thead>
                   <tr>
