--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -38,7 +38,7 @@
 
 					<div class="wrap-input100 validate-input"
 						data-validate="Un correo valido es requerido, ejemplo: ex@abc.xyz">
-						<input class="input100" type="text" name="username" placeholder="Email">
+						<input class="input100" type="text" name="username" placeholder="Correo">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
@@ -62,7 +62,7 @@
 
 					<div class="text-center p-t-12">
 						<span class="txt1">
-							Olvido su
+							¿Olvidó su
 						</span>
 						<a class="txt2" href="/reset_pass">
 							Usuario / contraseña?
