--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -74,7 +74,7 @@
 
 					<div class="wrap-input100 validate-input" data-validate="Repita tu contraseña">
 						<input class="input100" type="password" name="confirm-password"
-							placeholder="Repita tu contraseña">
+							placeholder="Repite tu contraseña">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
