--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -47,7 +47,7 @@
 					</span>
 
 					<div class="wrap-input100 validate-input" data-validate="Un nombre es requerido">
-						<input class="input100" type="text" name="name" placeholder="Ingrese su nombre">
+						<input class="input100" type="text" name="name" placeholder="Ingresa tu nombre">
 						<span class="focus-input100"></span>
 						<span class="symbol-input100">
 							<i class="fa fa-user" aria-hidden="true"></i>
