--- a/views/categories.handlebars
+++ b/views/categories.handlebars
@@ -46,7 +46,7 @@
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">×</span><span
             class="sr-only">Close</span></button>
-        <h3 class="modal-title" id="lineModalLabel">Nuevo Ingreso</h3>
+        <h3 class="modal-title" id="lineModalLabel">Nueva categoría</h3>
       </div>
       <div class="modal-body">
 
@@ -55,7 +55,7 @@
           <div class="row">
             <div class="col-md-12">
               <div class="form-group">
-                <label for="currency">Nombre de la categoria</label>
+                <label for="currency">Nombre de la categoría</label>
                 <input required="required" type="text" autocomplete="off" class="form-control text-left" id="currency"
                   name="Name">
               </div>
