--- a/views/start.handlebars
+++ b/views/start.handlebars
@@ -158,7 +158,7 @@
       
       <h2><strong>Tu presupuesto para este mes</strong></h2>
 
-      <p>Verificalo constantemente para no exederte en los gastos.</p>
+      <p>Verifícalo constantemente para no exederte en los gastos.</p>
 
       {{#budgetMaker data}}
       {{/budgetMaker}}
