--- a/views/cards.handlebars
+++ b/views/cards.handlebars
@@ -97,7 +97,7 @@
         <div class="modal-footer">
           <div class="btn-group btn-group-justified" role="group" aria-label="group button">
             <div class="btn-group" role="group">
-              <button type="button" class="btn btn-block btn-danger btn-lg">Cerrar</button>
+              <button type="button" data-dismiss="modal" class="btn btn-block btn-danger btn-lg">Cerrar</button>
             </div>
             <div class="btn-group" role="group">
               <button class="btn btn-block btn-success btn-lg" onclick="addCreditCard()">Guardar</button>
