--- a/views/getStarted.handlebars
+++ b/views/getStarted.handlebars
@@ -35,14 +35,14 @@
       </div>
 
       <div class="form-group">
-        <label for="salary">Introduzca su salario</label>
-        <h5 class="text-aqua">Esto nos ayudará a brindarle consejos financieros.</h5>
+        <label for="salary">Introduce tu salario</label>
+        <h5 class="text-aqua">Esto nos ayudará a brindarte consejos financieros.</h5>
         <input type="number" min="0" autocomplete="off" required="required" class="form-control text-left" id="salary"
           name="salary">
       </div>
 
       <div class="form-group">
-        <label for="budget">Establezca un presupuesto mensual.</label>
+        <label for="budget">Establece un presupuesto mensual.</label>
         <input type="number" min="0" autocomplete="off" required="required" class="form-control text-left" id="budget"
           name="budget">
       </div>
