--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -62,7 +62,7 @@
 
 					<div class="text-center p-t-12">
 						<span class="txt1">
-							¿Olvidó su
+							¿Olvidaste tu
 						</span>
 						<a class="txt2" href="/reset_pass">
 							Usuario / contraseña?
